crates/lower/src/tests/snapshots/binop_inner.snap
---
source: crates/lower/src/tests.rs
assertion_line: 47
expression: "(test[1], res)"
---
- "\nfn main() {\n    let x: int = 1\n    let y: bool = x <= 3\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
              module: main
              member_of: ~
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: x
                          antn: Int32
                          init:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                    - kind:
                        Let:
                          name: y
                          antn: Bool
                          init:
                            kind:
                              BinOp:
                                op: LtEq
                                lhs:
                                  kind:
                                    Ident:
                                      name: x
                                      ty: Int32
                                rhs:
                                  kind:
                                    Lit:
                                      value:
                                        Int32: 3
                                      ty: Int32
                                ty: Bool
                  ty: Void
    prototypes:
      - name: main
        args: []
        ret_ty: Void
        is_extern: false
        module: main
        member_of: ~

