crates/lower/src/tests/snapshots/init_literal_struct.snap
---
source: crates/lower/src/tests.rs
assertion_line: 228
expression: "(test[1], res)"
---
- "\nfn main() {\n    let x: Foo\n}\nstruct Foo {\n    let a: int\n    let b: bool\n}\n"
- Ok:
    functions:
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: x
                          antn:
                            Comp: Foo
                          init:
                            kind:
                              Lit:
                                value:
                                  Comp:
                                    - kind:
                                        Lit:
                                          value:
                                            Int32: 0
                                          ty: Int32
                                    - kind:
                                        Lit:
                                          value:
                                            Bool: false
                                          ty: Bool
                                ty:
                                  Comp: Foo
                  ty: Void
    structs:
      - kind:
          Struct:
            name: Foo
            field_tys:
              - Int32
              - Bool
    prototypes:
      - name: main
        args: []
        ret_ty: Void
        is_extern: false
        module: main

