crates/lower/src/tests/snapshots/struct_self.snap
---
source: crates/lower/src/tests.rs
assertion_line: 170
expression: "(test[1], res)"
---
- "\nstruct Foo {\n    let a: int\n    fn b() -> int { self.a + 1 }\n}\n"
- Ok:
    functions:
      - kind:
          Fn:
            proto:
              name: "_main::Foo_b~int32"
              args:
                - - self
                  - Comp: "main::Foo"
              ret_ty: Int32
              is_extern: false
              module: main
            body:
              kind:
                Block:
                  list:
                    - kind:
                        BinOp:
                          op: Add
                          lhs:
                            kind:
                              FSelector:
                                comp:
                                  kind:
                                    Ident:
                                      name: self
                                      ty:
                                        Comp: "main::Foo"
                                idx: 0
                                ty: Int32
                          rhs:
                            kind:
                              Lit:
                                value:
                                  Int32: 1
                                ty: Int32
                          ty: Int32
                  ty: Int32
    structs:
      - kind:
          Struct:
            name: "main::Foo"
            field_tys:
              - Int32
    prototypes:
      - name: "_main::Foo_b~int32"
        args:
          - - self
            - Comp: "main::Foo"
        ret_ty: Int32
        is_extern: false
        module: main

